load("@rules_java//java:defs.bzl", "java_library")
load("//legend-pure:grammar.bzl", "antlr_gen")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
)

java_library(
    name = "legend-pure-m2-dsl-graph-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/antlr/GraphAntlrParser.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/antlr/GraphAntlrTreeWalker.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/antlr/GraphDSL.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/processor/RootGraphFetchTreeProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/unbinder/RootGraphFetchTreeUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/validator/RootGraphFetchTreeValidator.java",
        "src/main/java/org/finos/legend/pure/m2/inlinedsl/graph/validator/RootGraphFetchTreeVisibilityValidator.java",
    ] + [
        ":antlr_gen",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
