load("//tools/build_rules:pure_generation.bzl", "pure_model_generation")

java_library(
    name = "m2-dsl-graph-pure-boot",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        ":m2-dsl-graph-pure-boot",
    ],
    visibility = ["//visibility:public"],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    visibility = ["//visibility:public"],
    model_name = "Graph",
    source_path = "/platform_dsl_graph/graph.pure",
    tool = ":M3CoreInstanceGenerator",
)

java_library(
    name = "legend-pure-m2-dsl-graph-pure",
    srcs = [":pure_gen"],
    deps = [
        ":m2-dsl-graph-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "@maven//:org_eclipse_collections_eclipse_collections",
        "@maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    exports = [
        ":m2-dsl-graph-pure-boot",
    ],
    visibility = ["//visibility:public"],
)
