load("//tools/build_rules:legend_java_library.bzl", "legend_java_library")

legend_java_library(
    name = "legend-pure-runtime-java-extension-compiled-dsl-graph",
    src_root = "legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-runtime-java-extension-compiled-dsl-graph/src/main/java",
    srcs = glob(["src/main/java/**/*.java"]),
    model_name = "Graph",
    model_factory_class = "org.finos.legend.pure.m2.inlinedsl.graph.antlr.GraphDSL",
    model_srcs = ["//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-pure:pure_gen"],
    javacopts = [
        "-Xep:IdentityBinaryExpression:OFF",
        "-Xep:IsInstanceIncompatibleType:OFF",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-graph/legend-pure-m2-dsl-graph-pure",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-compiled",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
