load("@rules_java//java:defs.bzl", "java_library")
load("//legend-pure:grammar.bzl", "antlr_gen")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:grammar_files",
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
)

java_library(
    name = "legend-pure-m2-dsl-mapping-grammar",
    srcs = glob(["src/main/java/**/*.java"]) + [":antlr_gen"],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "mapping-grammar-test-utils",
    srcs = ["src/test/java/org/finos/legend/pure/m2/dsl/mapping/test/GraphWalker.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:m2-dsl-mapping-pure-boot",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
