load("@rules_java//java:defs.bzl", "java_library")
load("//legend-pure:grammar.bzl", "antlr_gen")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]) + [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:grammar_files",
        "//legend-pure/legend-pure-core/legend-pure-m4:grammar_files",
    ],
    tool = "//legend-pure:antlr4_tool",
)

java_library(
    name = "legend-pure-m2-dsl-mapping-grammar",
    srcs = [
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/Mapping.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/AggregationAwareParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/EnumerationMappingParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/IMappingParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/MappingParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/OperationParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/RelationMappingParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/XStoreParser.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/antlr/AggregationAwareGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/antlr/EnumerationMappingGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/antlr/MappingGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/antlr/OperationGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/antlr/RelationMappingGraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/AggregationAwareProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/AssociationImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/EnumerationMappingProcessor.java",

        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/MappingProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/OperationSetImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/PropertyMappingProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/PropertyOwnerImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/PureInstanceSetImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/RelationFunctionInstanceSetImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/SetImplementationProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/processor/XStoreProcessor.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/AggregationAwareUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/AssociationImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/EnumerationMappingUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/InstanceSetImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/MappingUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/OperationSetImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/PropertyMappingsImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/PropertyOwnerImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/PureInstanceSetImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/RelationFunctionInstanceSetImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/SetImplementationUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/unloader/XStoreUnbind.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/AggregationAwareValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/MappingValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/PureInstanceSetImplementationValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/RelationFunctionInstanceSetImplementationValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/StoreSubstitutionValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/StoreValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/validator/XStoreValidator.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/AggregateSpecificationValueSpecificationContextUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/EnumerationMappingUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/MappingIncludeUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/MappingUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/PropertyMappingUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/PropertyMappingValueSpecificationContextUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/PropertyOwnerImplementationWalker.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/grammar/v1/walker/SubstituteStoreUnloaderWalk.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/runtime/binary/reference/EnumerationMappingReferenceSerializer.java",
        "src/main/java/org/finos/legend/pure/m2/dsl/mapping/serialization/runtime/binary/reference/SetImplementationReferenceSerializer.java",
    ] + [":antlr_gen"],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "mapping-grammar-test-utils",
    srcs = ["src/test/java/org/finos/legend/pure/m2/dsl/mapping/test/GraphWalker.java"],
    visibility = ["//visibility:public"],
    deps = [
        ":legend-pure-m2-dsl-mapping-grammar",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure:m2-dsl-mapping-pure-boot",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)
