load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_par")
load("//tools/build_rules:pure_generation.bzl", "pure_model_generation")

java_library(
    name = "m2-dsl-mapping-pure-boot",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_binary(
    name = "M3CoreInstanceGenerator",
    main_class = "org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-mapping-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    ],
)

pure_model_generation(
    name = "pure_gen",
    srcs = glob(["src/main/resources/**/*.pure"]),
    model_name = "Mapping",
    source_path = "/platform_dsl_mapping/grammar/mapping.pure",
    tool = ":M3CoreInstanceGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "m2-dsl-mapping-pure-gen",
    srcs = [":pure_gen"],
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

java_library(
    name = "legend-pure-m2-dsl-mapping-pure",
    visibility = ["//visibility:public"],
    exports = [
        ":m2-dsl-mapping-pure-boot",
        ":m2-dsl-mapping-pure-gen",
    ],
)

java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":m2-dsl-mapping-pure-boot",
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-store/legend-pure-m2-dsl-store-pure",
    ],
)

pure_par(
    name = "pure_platform_dsl_mapping_par",
    out = "pure-platform_dsl_mapping.par",
    repo_name = "platform_dsl_mapping",
    tool = ":PureJarGenerator",
    visibility = ["//visibility:public"],
)

java_library(
    name = "pure_platform_dsl_mapping_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-mapping/legend-pure-m2-dsl-mapping-pure",
    resources = [":pure-platform_dsl_mapping.par"],
    visibility = ["//visibility:public"],
)
